[gd_scene load_steps=3 format=3 uid="uid://bnvgot4ixhhyr"]

[ext_resource type="Script" path="res://Bro2.gd" id="1_w6cev"]
[ext_resource type="Theme" uid="uid://24gn8ks4tnnx" path="res://asset/FontTheme.tres" id="2_tuh4x"]

[node name="Bro2" type="Node2D"]
script = ExtResource("1_w6cev")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1176.0
offset_bottom = 696.0
color = Color(0.333333, 0.32549, 0.345098, 1)

[node name="Sec1" type="Timer" parent="."]

[node name="Sec2" type="Timer" parent="."]

[node name="Min1" type="Timer" parent="."]
wait_time = 60.0

[node name="Min2" type="Timer" parent="."]
wait_time = 60.0

[node name="Watch1" type="Label" parent="."]
offset_left = 57.0
offset_top = 137.0
offset_right = 447.0
offset_bottom = 353.0
theme = ExtResource("2_tuh4x")
theme_override_colors/font_color = Color(0.517647, 0.521569, 0.529412, 1)
theme_override_font_sizes/font_size = 200
text = "0:0:0"

[node name="Watch2" type="Label" parent="."]
offset_left = 722.0
offset_top = 137.0
offset_right = 1112.0
offset_bottom = 353.0
theme = ExtResource("2_tuh4x")
theme_override_colors/font_color = Color(0.517647, 0.521569, 0.529412, 1)
theme_override_font_sizes/font_size = 200
text = "0:0:0"

[node name="ActiveWatch" type="Label" parent="."]
offset_left = 57.0
offset_top = 588.0
offset_right = 270.0
offset_bottom = 634.0
theme = ExtResource("2_tuh4x")
theme_override_font_sizes/font_size = 40
text = "Active Watch:"
metadata/_edit_use_anchors_ = true

[node name="W1" type="Label" parent="."]
offset_left = 209.0
offset_top = 105.0
offset_right = 283.0
offset_bottom = 140.0
theme = ExtResource("2_tuh4x")
text = "Active"

[node name="W2" type="Label" parent="."]
offset_left = 850.0
offset_top = 105.0
offset_right = 924.0
offset_bottom = 140.0
theme = ExtResource("2_tuh4x")
text = "Active"

[node name="Start" type="Button" parent="."]
offset_left = 533.0
offset_top = 68.0
offset_right = 644.0
offset_bottom = 108.0
theme = ExtResource("2_tuh4x")
theme_override_font_sizes/font_size = 30
text = "start"

[node name="Reset" type="Button" parent="."]
offset_left = 533.0
offset_top = 591.0
offset_right = 644.0
offset_bottom = 631.0
theme = ExtResource("2_tuh4x")
theme_override_font_sizes/font_size = 30
text = "Reset
"

[node name="Stop" type="Button" parent="."]
offset_left = 533.0
offset_top = 121.0
offset_right = 644.0
offset_bottom = 161.0
theme = ExtResource("2_tuh4x")
theme_override_font_sizes/font_size = 30
text = "Stop"

[node name="Swap" type="Button" parent="."]
offset_left = 495.0
offset_top = 186.0
offset_right = 678.0
offset_bottom = 263.0
theme = ExtResource("2_tuh4x")
theme_override_font_sizes/font_size = 30
text = "Swap Active
Watch
"

[connection signal="timeout" from="Sec1" to="." method="_on_sec_1_timeout"]
[connection signal="timeout" from="Sec2" to="." method="_on_sec_2_timeout"]
[connection signal="timeout" from="Min1" to="." method="_on_min_1_timeout"]
[connection signal="timeout" from="Min2" to="." method="_on_min_2_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Swap" to="." method="_on_swap_pressed"]
